src/objects/Share_Classes__c.object
<CustomObject>
    <description>To be used to track share classes as tied to products.</description>
    <fields>
        <fullName>CUSIP__c</fullName>
        <label>CUSIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <externalId>true</externalId>
        <label>Class Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Morningstar_Rating__c</fullName>
        <label>Morningstar Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Star</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Morningstar_Rating_visual__c</fullName>
        <formula>IF(ISPICKVAL(Morningstar_Rating__c  , &quot;1 Star&quot;),(IMAGE( &quot;/img/samples/stars_100.gif&quot;, &quot;1 Star&quot;)), 
IF(ISPICKVAL(Morningstar_Rating__c , &quot;2 Star&quot;), (Image(&quot;/img/samples/stars_200.gif&quot;, &quot;2 Stars&quot;)), 
IF(ISPICKVAL(Morningstar_Rating__c , &quot;3 Star&quot;), (IMAGE( &quot;/img/samples/stars_300.gif&quot;, &quot;3 Stars&quot;)), 
IF(ISPICKVAL(Morningstar_Rating__c , &quot;4 Star&quot;), (IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 Stars&quot;)), 
IF(ISPICKVAL(Morningstar_Rating__c , &quot;5 Star&quot;), (IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 Stars&quot;)),&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Morningstar Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Share Classes</relationshipLabel>
        <relationshipName>Share_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <label>Share Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Share Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Share Classes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>